Try to fix button shrink on iPhone

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h1 {
 .choice {
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     align-items: center;
     justify-content: center;
     padding: 0 6px;
